# pariline

./: .gitignore  README.md  index.html
demo/: fixtures-cache.json  index.html  server.js
docs/: DEMO_SCRIPT.md  TECHNICAL.md
feasibility/: explore.js  measure.js
idl/: pariline.json
program/: Anchor.toml  Cargo.toml
program/programs/pariline/: Cargo.toml
program/programs/pariline/src/: lib.rs
scripts/: bet.js  claim.js  common.js  crank.js  diag.js  seed.js
