[package]
name = "pariline"
version = "0.1.0"
description = "Parimutuel World Cup prediction market with trustless TxLINE Merkle-proof settlement"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pariline"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "1", features = ["init-if-needed"] }
